@@ -1,6 +1,6 @@
 {application, sop,
  [{description, "State-oriented programming framework."},
-  {vsn, "3.4.0"},
+  {vsn, "3.4.1"},
   {registered, []},
   {applications,
    [kernel,
