@@ -1,3 +1,9 @@
+2017-12-17  Gary Hai  <gary@XL59.com>
+
+  * src/sop.app.src: Bump version to "3.4.1", hibernate.
+
+  * src/sop.erl (start): Add default 'hibernate_after' option.
+
 2017-12-14  Gary Hai  <gary@XL59.com>
 
   * src/sop.app.src: Bump version to "3.4.0", monitors!
